<resources>
    <string name="app_name">Se.student.ju.HabitApp</string>

    <!-- Error handling messages -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="input_string_error_title">Input error!</string>
    <string name="input_string_error_description">The text field must not be empty or exceed 50 characters.</string>

    <!-- Home Screen -->
    <string name="home_create_habit_button_text">Create New Habit</string>
    <string name="home_challenge_friend_button_text">Challenge a Friend</string>
    <string name="home_habit_calendar_button_text">Habit-Calendar</string>

    <!-- Settings Screen -->
    <string name="settings_change_button_text">Change!</string>
    <string name="settings_light_mode_switch_text">Light</string>
    <string name="settings_dark_mode_switch_text">Dark</string>

    <!-- Create Habit -->
    <string name="create_create_habit_button_text">Create Habit!</string>

    <!-- Change Habit -->
    <string name="change_change_habit_button_text">Change!</string>
    <string name="change_delete_habit_button_text">Delete Habit!</string>
    <string name="change_delete_habit_popup_title_text">Delete?</string>
    <string name="change_delete_habit_popup_detail_text">Are you sure you want to delete?</string>

    <!-- Fragment reused in Create and Change -->
    <string name="fragment_new_habit_textview_text">Name of Habit</string>
    <string name="fragment_new_habit_edittext_hint_text">Habit name</string>
    <string name="fragment_set_period_textview_text">How Often?</string>
    <string name="fragment_set_time_textview_text">What time?</string>
    <string name="fragment_notification_setting_textview_text">Notifications?</string>
    <string name="fragment_switch_on_text">On</string>
    <string name="fragment_switch_off_text">Off</string>
    <string name="fragment_monday_text">M</string>
    <string name="fragment_tuesday_text">T</string>
    <string name="fragment_wednesday_text">W</string>
    <string name="fragment_thursday_text">T</string>
    <string name="fragment_friday_text">F</string>
    <string name="fragment_saturday_text">S</string>
    <string name="fragment_sunday_text">S</string>

    <!-- Custom calendar strings -->
    <string name="custom_calendar_done_habit_text">Have you done this today?</string>
    <string name="custom_calendar_confirm_button_text">Of Course!</string>
    <string name="selected_habit_popup_text">What do you want to do with this habit?</string>
    <string name="select_edit_habit">Edit</string>
    <string name="select_show_in_calendar">Show in Calendar</string>
    <string name="email">Email:</string>
    <string name="submit">Submit</string>
    <string name="which_habit">Which Habit</string>
    <string name="enter_friends_email">Enter friends email</string>
    <string name="enter_habit_name">Enter habit name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="i_want_to_register">I want to register</string>
    <string name="challenge_a_friend">Challenge A Friend</string>
    <string name="habit_calendar">Habit calendar</string>
    <string name="create_new_habit">Create new habit</string>
    <string name="lightmode_darkmode">LightMode - DarkMode</string>
    <string name="settings">Settings</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="challenge_request">You have been challenged!</string>
    <string name="have_challenged_you">have challenged you!</string>
    <string name="The_name_of_the_challenge_is">The name of the challenge is</string>
    <string name="The_challenge_is_done_on">The challenge is done on</string>
    <string name="The_time_everyday_is">The time everyday is</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="notifications_is_on">Notifications is on</string>
    <string name="notifications_is_off">Notifications is off</string>
    <string name="accept">accept</string>
    <string name="deny">deny</string>
    <string name="title_too_long">Title should be max</string>
    <string name="title_too_short">Title should be atleast</string>
    <string name="error">Error</string>
    <string name="choose_a_day">Choose a day</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="characters">characters</string>
    <string name="the_email_should_be_max">The email should be max</string>
    <string name="the_email_should_be_min">The email should be min</string>
    <string name="the_title_of_the_habit_should_max_be">The title of the habit should max be</string>
    <string name="the_title_of_the_habit_should_min_be">The title of the habit should min be</string>
    <string name="the_password_should_be_max">The password should be max</string>
    <string name="the_password_should_be_min">The password should be min</string>

    <string name="notificationContentTitle">HabitApp</string>
    <string name="notificationContentText">Do not forget to do your new habits today</string>
</resources>